--- a/contacts_app/src/App.css
+++ b/contacts_app/src/App.css
@@ -1,4 +1,23 @@
-.App {
-  text-align: center;
+body {
+  background-color: #f5f5ec;
 }
 
+
+.MuiBox-root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+header {
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#root {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+}
