--- a/contacts_app/src/App.css
+++ b/contacts_app/src/App.css
@@ -9,12 +9,12 @@ body {
   align-items: center;
 }
 
-header {
+/* header {
   margin-top: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
 
 #root {
   display: flex;
