--- a/contacts_app/src/App.css
+++ b/contacts_app/src/App.css
@@ -3,21 +3,9 @@ body {
 }
 
 
-.MuiBox-root {
+.MuiBox-root, #root {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-/* header {
-  margin-top: 5%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
-
-#root {
-  display: flex;
-    flex-direction: column;
-    align-items: center;
-}
